syntax = "proto3";

package weather;

// WeatherForecastingService provides current weather conditions
service WeatherForecastingService {
  // GetCurrentWeather provides the current weather update for a specified location
  rpc GetCurrentWeather(WeatherRequest) returns (WeatherResponse) {}

  // GetAirQuality provides the current air quality index for a specified location
  rpc GetAirQuality(AirQualityRequest) returns (AirQualityResponse) {}

  // GetWindData provides the current wind conditions for a specified location
  rpc GetWindData(WindDataRequest) returns (WindDataResponse) {}
}

// Request for weather updates on a specific location
message WeatherRequest {
  string location = 1;
}

// Response for weather updates
message WeatherResponse {
  string date = 1;
  string time = 2;
  int32 temperature = 3;
  string weather = 4;
}

// Request for air quality on a specific location
message AirQualityRequest {
  string location = 1;
}

// Response for air quality
message AirQualityResponse {
  string date = 1;
  string time = 2;
  int32 quality = 3;
  string message = 4;
}

// Request for wind data on a specific location
message WindDataRequest {
  string location = 1;
}

// Response for wind data
message WindDataResponse {
  string date = 1;
  string time = 2;
  int32 speed = 3;
  string direction = 4;
}
